# compositeAI

./: README.md  pyproject.toml  requirements.txt  test.py
compositeai/: agent.py
compositeai/agents/: __init__.py  agent.py  base_agent.py  plan_agent.py  raise_agent.py
compositeai/drivers/: __init__.py  base_driver.py  openai_driver.py
compositeai/tools/: __init__.py  base_tool.py  default_agent_tools.py  google_tool.py  test_tool.py  web_scraper_tool.py
examples/: private_investigator.py  stock_analysis.py  test.py
src/: agent.py  drivers.py  tools.py
